installdir = $(pkglibdir)/python/Plugins/SystemPlugins/SoftwareManager

SUBDIRS = meta

install_PYTHON =	\
	__init__.py \
	BackupRestore.py \
	Flash_online.py \
	SoftwareTools.py \
	ImageBackup.py \
	RestoreWizard.py

dist_install_DATA = \
	restorewizard.xml \
	installable.png \
	installed.png \
	install.png \
	noprev.png \
	remove.png \
	update.png \
	upgradeable.png \
	upgrade.png
